Implementing @martinjankowiak's suggestions

--- a/tutorial/source/cvae.ipynb
+++ b/tutorial/source/cvae.ipynb
@@ -7,18 +7,18 @@
     "# Conditional Variational Auto-encoder\n",
     "\n",
     "## Introduction\n",
-    "This tutorial implements [Learning Structured Output Representation using Deep Conditional Generative Models](http://papers.nips.cc/paper/5775-learning-structured-output-representation-using-deep-conditional-generati) paper, which introduced **Conditional Variational Auto-encoders** in 2015, using Pyro PPL.\n",
+    "This tutorial implements [Learning Structured Output Representation using Deep Conditional Generative Models](http://papers.nips.cc/paper/5775-learning-structured-output-representation-using-deep-conditional-generati) paper, which introduced Conditional Variational Auto-encoders in 2015, using Pyro PPL.\n",
     "\n",
-    "Supervised deep learning has been successfully applied for many recognition problems in machine learning and computer vision. Although it can approximate a complex many-to-one function very well when large number of training data is provided, the **lack of probabilistic inference of the current supervised deep learning methods makes it difficult to model a complex structured output representations**. In this work, Kihyuk Sohn, Honglak Lee and Xinchen Yan develop a **scalable deep conditional generative model** for structured output variables **using Gaussian latent variables**. The model is trained efficiently in the framework of **stochastic gradient variational Bayes**, and allows a fast prediction using stochastic feed-forward inference. They called the model Conditional Variational Auto-encoder (CVAE).\n",
+    "Supervised deep learning has been successfully applied for many recognition problems in machine learning and computer vision. Although it can approximate a complex many-to-one function very well when large number of training data is provided, the lack of probabilistic inference of the current supervised deep learning methods makes it difficult to model a complex structured output representations. In this work, Kihyuk Sohn, Honglak Lee and Xinchen Yan develop a scalable deep conditional generative model for structured output variables using Gaussian latent variables. The model is trained efficiently in the framework of stochastic gradient variational Bayes, and allows a fast prediction using stochastic feed-forward inference. They called the model Conditional Variational Auto-encoder (CVAE).\n",
     "\n",
-    "The CVAE is a **conditional directed graphical model** whose input observations modulate the prior on Gaussian latent variables that generate the outputs. It is trained to **maximize the conditional log-likelihood**. The authors formulate the variational learning objective of the CVAE in the framework of stochastic gradient variational Bayes (SGVB). In experiments, they demonstrate the effectiveness of the CVAE in comparison to the deterministic neural network counterparts in generating diverse but realistic output predictions using stochastic inference. Here, we will implement their proof of concept: an artificial experimental setting for structured output prediction using MNIST database.\n",
+    "The CVAE is a conditional directed graphical model whose input observations modulate the prior on Gaussian latent variables that generate the outputs. It is trained to maximize the conditional marginal log-likelihood. The authors formulate the variational learning objective of the CVAE in the framework of stochastic gradient variational Bayes (SGVB). In experiments, they demonstrate the effectiveness of the CVAE in comparison to the deterministic neural network counterparts in generating diverse but realistic output predictions using stochastic inference. Here, we will implement their proof of concept: an artificial experimental setting for structured output prediction using MNIST database.\n",
     "\n",
     "## The problem\n",
     "Let's divide each digit image into four quadrants, and take one, two, or three quadrant(s) as an input and the remaining quadrants as an output to be predicted. The image below shows the case where one quadrant is the input:\n",
     "\n",
     "<img src=\"https://i.ibb.co/x17xFwy/image1.png\" alt=\"image1\" width=\"300\">\n",
     "\n",
-    "Our objective is to **learn a model that can perform probabilistic inference and make diverse predictions from a single input**. This is because we are not simply modeling a many-to-one function as in classification tasks, but we may need to model a mapping from **single input to many possible outputs**. One of the limitations of deterministic neural networks is that they generate only a single prediction. In the example above, the input shows a small part of a digit that might be a three or a five. Deterministic neural networks are not suitable in **modeling a distribution with multiple modes**.\n",
+    "Our objective is to **learn a model that can perform probabilistic inference and make diverse predictions from a single input**. This is because we are not simply modeling a many-to-one function as in classification tasks, but we may need to model a mapping from single input to many possible outputs. One of the limitations of deterministic neural networks is that they generate only a single prediction. In the example above, the input shows a small part of a digit that might be a three or a five. \n",
     "\n",
     "## Preparing the data\n",
     "We use the MNIST dataset; the first step is to prepare it. Depending on how many quadrants we will use as inputs, we will build the datasets and dataloaders, removing the unused pixels with -1:"
@@ -178,12 +178,12 @@
     "\n",
     "<img src=\"https://i.ibb.co/0mVvkSF/image2.png\" alt=\"image1\" width=\"800\">\n",
     "\n",
-    "Deep CGMs are trained to maximize the conditional log-likelihood. Often the objective function is intractable, and we apply the SGVB framework to train the model. The empirical lower bound is written as:\n",
+    "Deep CGMs are trained to maximize the conditional marginal log-likelihood. Often the objective function is intractable, and we apply the SGVB framework to train the model. The empirical lower bound is written as:\n",
     "\n",
     "$$ \\tilde{\\mathcal{L}}_{\\text{CVAE}}(x, y; \\theta, \\phi) = -KL(q_{\\phi}(z | x, y) || p_{\\theta}(z | x)) + \\frac{1}{L}\\sum_{l=1}^{L}\\log p_{\\theta}(y | x, z^{(l)}) $$\n",
     "\n",
-    "where $\\bf z^{(l)}$ is the reparametrized latent variable product of the reparametrization trick, and $L$ is the number of samples (or particles in Pyro nomenclature).\n",
-    "We call this model **conditional variational auto-encoder (CVAE)**. The CVAE is composed of multiple MLPs, such as **recognition network** $q_{\\phi}({\\bf z} | \\bf{x, y})$, **(conditional) prior network** $p_{\\theta}(\\bf{z} | \\bf{x})$, and **generation network** $p_{\\theta}(\\bf{y} | \\bf{x, z})$. In designing the network architecture, we build the network components of the CVAE **on top of the baseline NN**. Specifically, as shown in (d) above, not only the direct input $\\bf x$, but **also the initial guess $\\hat{y}$ made by the NN are fed into the prior network**. \n",
+    "where $\\bf z^{(l)}$ is a Gaussian latent variable product, and $L$ is the number of samples (or particles in Pyro nomenclature).\n",
+    "We call this model conditional variational auto-encoder (CVAE). The CVAE is composed of multiple MLPs, such as **recognition network** $q_{\\phi}({\\bf z} | \\bf{x, y})$, **(conditional) prior network** $p_{\\theta}(\\bf{z} | \\bf{x})$, and **generation network** $p_{\\theta}(\\bf{y} | \\bf{x, z})$. In designing the network architecture, we build the network components of the CVAE **on top of the baseline NN**. Specifically, as shown in (d) above, not only the direct input $\\bf x$, but also the initial guess $\\hat{y}$ made by the NN are fed into the prior network. \n",
     "\n",
     "Pyro makes it really easy to translate this architecture into code. The recognition network and the (conditional) prior network are encoders from the traditional VAE setting, while the generation network is the decoder:"
    ]
@@ -318,11 +318,11 @@
    "metadata": {},
    "source": [
     "## Evaluating the results\n",
-    "For qualitative analysis, we visualize the generated output samples in the next figure. As we can see, **the baseline NNs can only make a single deterministic prediction**, and as a result the output looks **blurry and doesn’t look realistic in many cases**. In contrast, the samples generated by the CVAE models are **more realistic and diverse in shape**; sometimes they can **even change their identity** (digit labels), such as from 3 to 5 or from 4 to 9, and vice versa.\n",
+    "For qualitative analysis, we visualize the generated output samples in the next figure. As we can see, the baseline NNs can only make a single deterministic prediction, and as a result the output looks blurry and doesn’t look realistic in many cases. In contrast, the samples generated by the CVAE models are more realistic and diverse in shape; sometimes they can even change their identity (digit labels), such as from 3 to 5 or from 4 to 9, and vice versa.\n",
     "\n",
     "<img src=\"https://i.ibb.co/Jvz9v71/cvae-q1.png\" alt=\"image1\" width=\"400\">\n",
     "\n",
-    "We also provide a quantitative evidence by estimating the conditional log-likelihoods (CLLs) in next table. \n",
+    "We also provide a quantitative evidence by estimating the marginal conditional log-likelihoods (CLLs) in next table. \n",
     "\n",
     "|                    | 1 quadrant | 2 quadrants | 3 quadrants |\n",
     "|--------------------|------------|-------------|-------------|\n",
@@ -339,6 +339,13 @@
     "[1] `Learning Structured Output Representation using Deep Conditional Generative Models`,<br/>&nbsp;&nbsp;&nbsp;&nbsp;\n",
     "Kihyuk Sohn, Xinchen Yan, Honglak Lee"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
