Reflecting the code changes in the tutorial text

--- a/tutorial/source/cvae.ipynb
+++ b/tutorial/source/cvae.ipynb
@@ -56,6 +56,12 @@
     "\n",
     "\n",
     "class MaskImages:\n",
+    "    \"\"\"This torchvision image transformation prepares the MNIST digits to be\n",
+    "    used in the tutorial. Depending on the number of quadrants to be used as\n",
+    "    inputs (1, 2, or 3), the transformation masks the remaining (3, 2, 1)\n",
+    "    quadrant(s) setting their pixels with -1. Additionally, the transformation\n",
+    "    adds the target output in the sample dict as the complementary of the input\n",
+    "    \"\"\"\n",
     "    def __init__(self, num_quadrant_inputs, mask_with=-1):\n",
     "        if num_quadrant_inputs <= 0 or num_quadrant_inputs >= 4:\n",
     "            raise ValueError('Number of quadrants as inputs must be 1, 2 or 3')\n",
@@ -67,12 +73,18 @@
     "        out = tensor.detach().clone()\n",
     "        h, w = tensor.shape\n",
     "\n",
+    "        # removes the bottom left quadrant from the target output\n",
     "        out[h // 2:, :w // 2] = self.mask_with\n",
+    "        # if num of quadrants to be used as input is 2,\n",
+    "        # also removes the top left quadrant from the target output\n",
     "        if self.num == 2:\n",
     "            out[:, :w // 2] = self.mask_with\n",
+    "        # if num of quadrants to be used as input is 3,\n",
+    "        # also removes the top right quadrant from the target output\n",
     "        if self.num == 3:\n",
     "            out[:h // 2, :] = self.mask_with\n",
     "\n",
+    "        # now, sets the input as complementary\n",
     "        inp = tensor.clone()\n",
     "        inp[out != -1] = self.mask_with\n",
     "\n",
@@ -149,21 +161,15 @@
    "outputs": [],
    "source": [
     "class MaskedBCELoss(nn.Module):\n",
-    "    def __init__(self, reduction='sum', masked_with=-1):\n",
+    "    def __init__(self, masked_with=-1):\n",
     "        super().__init__()\n",
-    "        self.reduction = reduction\n",
     "        self.masked_with = masked_with\n",
     "\n",
     "    def forward(self, input, target):\n",
     "        target = target.view(input.shape)\n",
     "        loss = F.binary_cross_entropy(input, target, reduction='none')\n",
     "        loss[target == self.masked_with] = 0\n",
-    "        if self.reduction == 'sum':\n",
-    "            return loss.sum()\n",
-    "        elif self.reduction == 'mean':\n",
-    "            return loss.sum() / (target != -1).sum()\n",
-    "        else:\n",
-    "            raise ValueError(f\"{self.reduction} is not a valid value\")"
+    "        return loss.sum()"
    ]
   },
   {
