Reflecting the code changes in the tutorial text

--- a/tutorial/source/cvae.ipynb
+++ b/tutorial/source/cvae.ipynb
@@ -168,8 +168,12 @@
     "        target = target.view(input.shape)\n",
     "        loss = F.binary_cross_entropy(input, target, reduction='none')\n",
     "        loss[target == self.masked_with] = 0\n",
-    "        return loss.sum()\n",
-    "```"
+    "        if self.reduction == 'sum':\n",
+    "            return loss.sum()\n",
+    "        elif self.reduction == 'mean':\n",
+    "            return loss.sum() / (target != -1).sum()\n",
+    "        else:\n",
+    "            raise ValueError(f\"{self.reduction} is not a valid value\")"
    ]
   },
   {
