Improving tutorial text (changing to "Gaussian latent variable" and adding "lower is better" in table description)

--- a/tutorial/source/cvae.ipynb
+++ b/tutorial/source/cvae.ipynb
@@ -188,7 +188,7 @@
     "\n",
     "$$ \\tilde{\\mathcal{L}}_{\\text{CVAE}}(x, y; \\theta, \\phi) = -KL(q_{\\phi}(z | x, y) || p_{\\theta}(z | x)) + \\frac{1}{L}\\sum_{l=1}^{L}\\log p_{\\theta}(y | x, z^{(l)}) $$\n",
     "\n",
-    "where $\\bf z^{(l)}$ is a Gaussian latent variable product, and $L$ is the number of samples (or particles in Pyro nomenclature).\n",
+    "where $\\bf z^{(l)}$ is a Gaussian latent variable, and $L$ is the number of samples (or particles in Pyro nomenclature).\n",
     "We call this model conditional variational auto-encoder (CVAE). The CVAE is composed of multiple MLPs, such as **recognition network** $q_{\\phi}({\\bf z} | \\bf{x, y})$, **(conditional) prior network** $p_{\\theta}(\\bf{z} | \\bf{x})$, and **generation network** $p_{\\theta}(\\bf{y} | \\bf{x, z})$. In designing the network architecture, we build the network components of the CVAE **on top of the baseline NN**. Specifically, as shown in (d) above, not only the direct input $\\bf x$, but also the initial guess $\\hat{y}$ made by the NN are fed into the prior network. \n",
     "\n",
     "Pyro makes it really easy to translate this architecture into code. The recognition network and the (conditional) prior network are encoders from the traditional VAE setting, while the generation network is the decoder:"
@@ -328,7 +328,7 @@
     "\n",
     "<img src=\"https://i.ibb.co/Jvz9v71/cvae-q1.png\" alt=\"image1\" width=\"400\">\n",
     "\n",
-    "We also provide a quantitative evidence by estimating the marginal conditional log-likelihoods (CLLs) in next table. \n",
+    "We also provide a quantitative evidence by estimating the marginal conditional log-likelihoods (CLLs) in next table (lower is better). \n",
     "\n",
     "|                    | 1 quadrant | 2 quadrants | 3 quadrants |\n",
     "|--------------------|------------|-------------|-------------|\n",
