Converting code cells to text cells Removing the .save() and .load() methods from CVAE

--- a/tutorial/source/cvae.ipynb
+++ b/tutorial/source/cvae.ipynb
@@ -25,11 +25,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```Python\n",
     "class CVAEMNIST(Dataset):\n",
     "    def __init__(self, root, train=True, transform=None, download=False):\n",
     "        self.original = MNIST(root, train=train, download=download)\n",
@@ -114,7 +113,8 @@
     "        )\n",
     "        dataset_sizes[mode] = len(datasets[mode])\n",
     "\n",
-    "    return datasets, dataloaders, dataset_sizes"
+    "    return datasets, dataloaders, dataset_sizes\n",
+    "```"
    ]
   },
   {
@@ -126,11 +126,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```Python\n",
     "class BaselineNet(nn.Module):\n",
     "    def __init__(self, hidden_1, hidden_2):\n",
     "        super().__init__()\n",
@@ -144,7 +143,8 @@
     "        hidden = self.relu(self.fc1(x))\n",
     "        hidden = self.relu(self.fc2(hidden))\n",
     "        y = torch.sigmoid(self.fc3(hidden))\n",
-    "        return y"
+    "        return y\n",
+    "```"
    ]
   },
   {
@@ -155,11 +155,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```Python\n",
     "class MaskedBCELoss(nn.Module):\n",
     "    def __init__(self, masked_with=-1):\n",
     "        super().__init__()\n",
@@ -169,7 +168,8 @@
     "        target = target.view(input.shape)\n",
     "        loss = F.binary_cross_entropy(input, target, reduction='none')\n",
     "        loss[target == self.masked_with] = 0\n",
-    "        return loss.sum()"
+    "        return loss.sum()\n",
+    "```"
    ]
   },
   {
@@ -195,11 +195,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```Python\n",
     "class Encoder(nn.Module):\n",
     "    def __init__(self, z_dim, hidden_1, hidden_2):\n",
     "        super().__init__()\n",
@@ -301,22 +300,7 @@
     "                loc, scale = self.recognition_net(xs, ys)\n",
     "\n",
     "            pyro.sample(\"z\", dist.Normal(loc, scale).to_event(1))\n",
-    "\n",
-    "    def save(self, model_path):\n",
-    "        torch.save({\n",
-    "            'prior': self.prior_net.state_dict(),\n",
-    "            'generation': self.generation_net.state_dict(),\n",
-    "            'recognition': self.recognition_net.state_dict()\n",
-    "        }, model_path)\n",
-    "\n",
-    "    def load(self, model_path, map_location=None):\n",
-    "        net_weights = torch.load(model_path, map_location=map_location)\n",
-    "        self.prior_net.load_state_dict(net_weights['prior'])\n",
-    "        self.generation_net.load_state_dict(net_weights['generation'])\n",
-    "        self.recognition_net.load_state_dict(net_weights['recognition'])\n",
-    "        self.prior_net.eval()\n",
-    "        self.generation_net.eval()\n",
-    "        self.recognition_net.eval()"
+    "```"
    ]
   },
   {
@@ -347,10 +331,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
