Fixing rendering by removing indentation

--- a/tutorial/source/cvae.ipynb
+++ b/tutorial/source/cvae.ipynb
@@ -311,12 +311,7 @@
     "The training code can be found in the [Github repo](https://github.com/pyro-ppl/pyro/tree/dev/examples/cvae). \n",
     "Click play in the video below to watch how the CVAE learns throughout approximately 40 epochs.\n",
     "\n",
-    "<p>\n",
-    "    <video muted controls loop width=\"100%\">\n",
-    "        <source src=\"https://ucals-github.s3-sa-east-1.amazonaws.com/cvae_animation.mp4\" type=\"video/mp4\">\n",
-    "        <source src=\"https://ucals-github.s3-sa-east-1.amazonaws.com/cvae_animation.webm\" type=\"video/webm\">\n",
-    "    </video>\n",
-    "</p>"
+    "<p><video muted controls loop width=\"100%\"><source src=\"https://ucals-github.s3-sa-east-1.amazonaws.com/cvae_animation.mp4\" type=\"video/mp4\"><source src=\"https://ucals-github.s3-sa-east-1.amazonaws.com/cvae_animation.webm\" type=\"video/webm\"></video></p>"
    ]
   },
   {
