Implementing @martinjankowiak suggestions

--- a/tutorial/source/prodlda.ipynb
+++ b/tutorial/source/prodlda.ipynb
@@ -9,16 +9,13 @@
     "This tutorial implements [Autoencoding Variational Inference For Topic Models](https://arxiv.org/abs/1703.01488) paper from Akash Srivastava and Charles Sutton, which introduced ProdLDA topic model in 2017. This model returns consistently better topics than the vanilla LDA, is much faster and computational efficient, and does not require rigorous mathematical derivations to handle changes in the model (black box). This document also serves as a gentle introduction to probabilistic modeling with Pyro, being heavily inspired in [Probabilistic topic models](http://www.cs.columbia.edu/~blei/papers/Blei2012.pdf) from David Blei.\n",
     "\n",
     "## Introduction\n",
-    "> \"Statistical thinking will one day be as necessary for efficient citizenship as the ability to read and write.\" H.G.Wells\n",
-    "\n",
-    "As of the writing of this tutorial (Sep'2020), www.worldwidewebsize.com estimates there are at least 5.46 billion  indexed web pages, a number that keeps growing at accelerated pace (there are estimates pointing to 380 new websites every minute!). In 2010, Google Books estimated a total of 130 million books ever written, while a study from UNESCO found that 2.2 million new titles are published worldwide each year (from 2013). And accordingly to STM, the leading global trade association for academic and professional publishers, there are about 33,100 active scholarly peer-reviewed English-language journals in collectively publishing over 3 million scientific articles a year. No wonder why terms like *data deluge*, *information explosion* and *information overload* are increasingly hitting the headlines of several publications.\n",
-    "\n",
     "While more and more texts are available online, we simply do not have the human power to read and study them all. To this end, machine learning researchers have developed probabilistic topic modeling, a suite of algorithms that aim to discover and annotate large archives of documents with thematic information. Topic modeling algorithms are statistical methods that analyze the words of the original texts to discover the themes that run through them, how those themes are connected to each other, and how they change over time. They enable us to organize and summarize electronic archives at a scale that would be impossible by human annotation. The most popular topic model is called latent Dirichlet allocation, or LDA.\n",
     "\n",
     "## Latent Dirichlet Allocation Intuition\n",
     "LDA is a statistical model of document collections, which capture the intuition that documents exhibit multiple topics. It is most easily described by its generative process, the imaginary random process by which the model assumes the documents arose. The figure below illustrates the intuition:\n",
     "\n",
     "<img src=\"https://i.ibb.co/zV5rjX6/Screen-Shot-2020-09-24-at-11-21-38.png\" alt=\"image1\">\n",
+    "<center>Figure 1: The intuition behind Latent Dirichlet Allocation (Blei 2012).</center>\n",
     "\n",
     "We assume that some number of “topics,” which are probability distributions over words in the vocabulary, exist for the whole collection (far left). Each document is assumed to be generated as follows: i) first, randomly choose a distribution over the topics (the histogram at right); ii) then, for each word, randomly choose a topic assignment (the colored coins), and randomly choose the word from the corresponding topic. For a in-depth intuition description, please check the excellent article from David Blei.\n",
     "\n",
@@ -47,7 +44,7 @@
     "\n",
     "However, we assume these probabilities that generated the dataset are hidden: they are latent random variables. We don't have access to them, only the observations $\\mathcal {D}$. The purpose of probabilistic modeling is to learn the hidden variables from the observations only.\n",
     "\n",
-    "Suppose we observe N dice rolls, $\\mathcal{D} = \\{x_1, ..., x_n\\}$, where $x_i \\in \\{1, ..., 6\\}$. If we assume the data is iid, the likelihood of observing this specific dataset has the form \n",
+    "Suppose we observe N dice rolls, $\\mathcal{D} = \\{x_1, ..., x_n\\}$, where $x_i \\in \\{1, ..., 6\\}$. If we assume the data is independent and identically distributed (iid), the likelihood of observing this specific dataset has the form \n",
     "\n",
     "\\begin{equation*}\n",
     "p(\\mathcal{D} | \\theta) = \\prod_{i}^{6} \\theta_{k}^{N_k}\n",
@@ -259,7 +256,7 @@
     "In the paper Autoencoding Variational Inference For Topic Models from 2017, Akash Srivastava and Charles Sutton solved both challenges. They presented the first effective AEVB inference method for topic models, and illustrated it by introducing a new topic model called ProdLDA, which consistently produces better topics than standard LDA, is fast and computational efficent, and does not require rigorous mathematical derivations to handle changes in the model. Let's now understand this specific model and see how to implement it using Pyro.\n",
     "\n",
     "## Pre-processing Data and Vectorizing Documents\n",
-    "So, let's get started. The first thing we need to do is to **prepare the data**. We will use the **20 newsgroups text dataset**, the same used the authors. It comes with scikit-learn, free machine learning library for Python. If you don't have it installed, just run `pip install scikit-learn` to install it.\n",
+    "So, let's get started. The first thing we need to do is to **prepare the data**. We will use the **20 newsgroups text dataset**, the same used the authors. It comes with scikit-learn, free machine learning library for Python. \n",
     "\n",
     "The 20 newsgroups dataset comprises around 18000 newsgroups posts on 20 topics. Let's fetch the data:"
    ]
@@ -282,7 +279,7 @@
    "source": [
     "Now, let's vectorize the corpus. This means:\n",
     "\n",
-    "1. Creating a dictiorary where each word corresponts to an index\n",
+    "1. Creating a dictionary where each word corresponts to an index\n",
     "2. Removing rare words (words that appear in less than 20 documents) and common words (words that appear in more than 50% of the documents)\n",
     "3. Counting how many times each word appears in each document\n",
     "\n",
@@ -346,7 +343,7 @@
     "\n",
     "**Challenge #2: Component collapsing (i.e. inference network stuck in bad local optimum).** To solve this, they used Adam optimizer, batch normalization and dropout units in the inference network.\n",
     "\n",
-    "**ProdLDA vs LDA.** Finally, the only changes ProdLDA have in comparisot to regular LDA are that $\\beta$ is unnormalized, and that the conditional distribution of $w_n$ is defined as $w_n | \\beta, \\theta \\sim \\text{Categorical}(\\sigma(\\beta \\theta))$.\n",
+    "**ProdLDA vs LDA.** Finally, the only changes ProdLDA have in comparison to regular LDA are that $\\beta$ is unnormalized, and that the conditional distribution of $w_n$ is defined as $w_n | \\beta, \\theta \\sim \\text{Categorical}(\\sigma(\\beta \\theta))$.\n",
     "\n",
     "That's it. If you have any questions about why are these choices made, please check the paper. Now, let's implement this model in Pyro:"
    ]
@@ -371,20 +368,22 @@
    "outputs": [],
    "source": [
     "class Encoder(nn.Module):\n",
+    "    # Base class for the inference net, used in the guide\n",
     "    def __init__(self, vocab_size, num_topics, hidden, dropout):\n",
     "        super().__init__()\n",
-    "        self.drop = nn.Dropout(dropout)\n",
+    "        self.drop = nn.Dropout(dropout)  # to avoid component collapsing\n",
     "        self.fc1 = nn.Linear(vocab_size, hidden)\n",
     "        self.fc2 = nn.Linear(hidden, hidden)\n",
     "        self.fcmu = nn.Linear(hidden, num_topics)\n",
     "        self.fclv = nn.Linear(hidden, num_topics)\n",
-    "        self.bnmu = nn.BatchNorm1d(num_topics)\n",
-    "        self.bnlv = nn.BatchNorm1d(num_topics)\n",
+    "        self.bnmu = nn.BatchNorm1d(num_topics)  # to avoid component collapsing\n",
+    "        self.bnlv = nn.BatchNorm1d(num_topics)  # to avoid component collapsing\n",
     "\n",
     "    def forward(self, inputs):\n",
     "        h = F.softplus(self.fc1(inputs))\n",
     "        h = F.softplus(self.fc2(h))\n",
     "        h = self.drop(h)\n",
+    "        # μ and Σ are the outputs\n",
     "        theta_loc = self.bnmu(self.fcmu(h))\n",
     "        theta_scale = self.bnlv(self.fclv(h))\n",
     "        theta_scale = (0.5 * theta_scale).exp()  # Enforces positivity\n",
@@ -392,6 +391,7 @@
     "\n",
     "\n",
     "class Decoder(nn.Module):\n",
+    "    # Base class for the recognition net, used in the model\n",
     "    def __init__(self, vocab_size, num_topics, dropout):\n",
     "        super().__init__()\n",
     "        self.beta = nn.Linear(num_topics, vocab_size)\n",
@@ -400,6 +400,7 @@
     "\n",
     "    def forward(self, inputs):\n",
     "        inputs = self.drop(inputs)\n",
+    "        # the output is σ(βθ)\n",
     "        return F.softmax(self.bn(self.beta(inputs)), dim=1)\n",
     "\n",
     "\n",
@@ -414,12 +415,15 @@
     "    def model(self, docs=None):\n",
     "        pyro.module(\"recognition_net\", self.recognition_net)\n",
     "        with pyro.plate(\"documents\", docs.shape[0]):\n",
+    "            # Dirichlet prior  𝑝(𝜃|𝛼) is replaced by a log-normal distribution\n",
     "            theta_loc = docs.new_zeros((docs.shape[0], self.num_topics))\n",
     "            theta_scale = docs.new_ones((docs.shape[0], self.num_topics))\n",
     "            theta = pyro.sample(\n",
     "                \"theta\", dist.LogNormal(theta_loc, theta_scale).to_event(1))\n",
-    "            theta = theta / theta.sum(1, keepdim=True)\n",
+    "            theta = theta / theta.sum(-1, keepdim=True)\n",
     "\n",
+    "            # conditional distribution of 𝑤𝑛 is defined as \n",
+    "            # 𝑤𝑛|𝛽,𝜃 ~ Categorical(𝜎(𝛽𝜃))\n",
     "            count_param = self.recognition_net(theta)\n",
     "            pyro.sample(\n",
     "                'obs',\n",
@@ -430,6 +434,8 @@
     "    def guide(self, docs=None):\n",
     "        pyro.module(\"inference_net\", self.inference_net)\n",
     "        with pyro.plate(\"documents\", docs.shape[0]):\n",
+    "            # Dirichlet prior  𝑝(𝜃|𝛼) is replaced by a log-normal distribution,\n",
+    "            # where μ and Σ are the inference net outputs\n",
     "            theta_loc, theta_scale = self.inference_net(docs)\n",
     "            theta = pyro.sample(\n",
     "                \"theta\", dist.LogNormal(theta_loc, theta_scale).to_event(1))\n",
@@ -617,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
