Fix more pyplot.hist() errors

--- a/tutorial/source/stable.ipynb
+++ b/tutorial/source/stable.ipynb
@@ -164,7 +164,7 @@
    ],
    "source": [
     "pyplot.figure(figsize=(9, 3))\n",
-    "pyplot.hist(r, bins=200)\n",
+    "pyplot.hist(r.numpy(), bins=200)\n",
     "pyplot.yscale('log')\n",
     "pyplot.ylabel(\"count\")\n",
     "pyplot.xlabel(\"daily log returns\")\n",
@@ -279,7 +279,7 @@
    "source": [
     "samples = poutine.uncondition(model)().detach()\n",
     "pyplot.figure(figsize=(9, 3))\n",
-    "pyplot.hist(samples, bins=200)\n",
+    "pyplot.hist(samples.numpy(), bins=200)\n",
     "pyplot.yscale(\"log\")\n",
     "pyplot.xlabel(\"daily log returns\")\n",
     "pyplot.ylabel(\"count\")\n",
@@ -522,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
