--- a/tutorial/source/dirichlet_process_mixture.ipynb
+++ b/tutorial/source/dirichlet_process_mixture.ipynb
@@ -487,7 +487,7 @@
     "likelihood = mixture_of_poisson(Bayes_Weights, Bayes_Rates, samples)\n",
     "\n",
     "plt.title(\"Number of Years vs. Sunspot Counts\")\n",
-    "plt.hist(data, bins=60, density=True, lw=0, alpha=0.75);\n",
+    "plt.hist(data.numpy(), bins=60, density=True, lw=0, alpha=0.75);\n",
     "plt.plot(samples, likelihood, label=\"Estimated Mixture Density\")\n",
     "plt.legend()\n",
     "plt.show()"
