add tsne plotting

--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -1077,6 +1077,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.manifold import TSNE\n",
+    "\n",
+    "data = test_loader.dataset.test_data.float()\n",
+    "classes = test_loader.dataset.test_labels\n",
+    "z_loc, z_scale = vae.encoder(data)\n",
+    "model_tsne = TSNE(n_components=2, random_state=0)\n",
+    "z_states = z_loc.detach().cpu().numpy()\n",
+    "z_embed = model_tsne.fit_transform(z_states)\n",
+    "classes = classes.detach().cpu().numpy()\n",
+    "fig = plt.figure()\n",
+    "for ic in range(10):\n",
+    "    ind_vec = np.zeros_like(classes)\n",
+    "    ind_vec[:, ic] = 1\n",
+    "    ind_class = classes[:, ic] == 1\n",
+    "    color = plt.cm.Set1(ic)\n",
+    "    plt.scatter(z_embed[ind_class, 0], z_embed[ind_class, 1], s=10, color=color)\n",
+    "plt.title(\"Latent Variable T-SNE per Class\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
