--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "$$ y = \\beta X + \\alpha + \\epsilon $$\n",
     "\n",
-    "where $w$ and $b$ are learnable parameters and $\\epsilon$ represents observation noise. Specifically $\\beta$ is a matrix of weights and $\\alpha$ is a bias vector.\n",
+    "where $\\beta$ and $\\alpha$ are learnable parameters and $\\epsilon$ represents observation noise. Specifically $\\beta$ is a matrix of weights and $\\alpha$ is a bias vector.\n",
     "\n",
     "In the first half of this tutorial, we will see how to incorporate uncertainty into our estimates of $\\alpha$ and $\\beta$ by using Pyro to implement Bayesian regression."
    ]
