--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -820,16 +820,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._axes.Axes at 0x7f28865694e0>"
+       "<matplotlib.axes._axes.Axes at 0x7f984f360320>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -850,7 +850,7 @@
     "pgm = daft.PGM()\n",
     "pgm.add_node(\"phi\", content=r\"$\\phi$\", x=2, y=4, fixed=True)\n",
     "pgm.add_node(\"z\", content=r\"$z_n$\", x=1, y=4)\n",
-    "pgm.add_node(\"x\", r\"$x_n$\", 1, 3, observed=True)\n",
+    "pgm.add_node(\"x\", content=r\"$x_n$\", x=1, y=3, observed=True)\n",
     "pgm.add_plate([0.5, 2.25, 1, 2.25], label=r\"$N$\")\n",
     "pgm.add_edge(\"x\", \"z\")\n",
     "pgm.add_edge(\"phi\", \"z\")\n",
