--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -1185,7 +1185,7 @@
     "        # decode the latent code z\n",
     "        loc_img = decoder(z)\n",
     "        # score against actual images\n",
-    "        pyro.sample(\"obs\", dist.Bernoulli(loc_img).to_event(1), obs=x.reshape(-1, 784))\n",
+    "        pyro.sample(\"obs\", dist.Bernoulli(loc_img).to_event(3), obs=x)\n",
     "```"
    ]
   },
@@ -1193,7 +1193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that `model()` is a callable that takes in a mini-batch of images `x` as input. This is a `torch.Tensor` of size `batch_size` x 784.\n",
+    "Note that `model()` is a callable that takes in a mini-batch of images `x` as input. This is a `torch.Tensor` of size `batch_size` x 1 x 28 x 28.\n",
     "\n",
     "The first thing we do inside of `model()` is register the (previously instantiated) decoder module with Pyro. Note that we give it an appropriate (and unique) name. This call to `pyro.module` lets Pyro know about all the parameters inside of the decoder network. \n",
     "\n",
