add a note about numpyro

--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -609,6 +609,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A note on performance: this optimization process is surprisingly slow, a consequence of high overhead in PyTorch for operations on small tensors. [NumPyro](https://github.com/pyro-ppl/numpyro), a version of Pyro built on Google's JAX library, can drastically speed up inference in models like this one, often by multiple orders of magnitude."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Model Evaluation\n",
     "\n",
     "To evaluate our model, we'll generate some predictive samples and look at the posteriors. For this we will make use of the [Predictive](http://docs.pyro.ai/en/stable/inference_algos.html#pyro.infer.predictive.Predictive) utility class.\n",
