--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -1057,7 +1057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VAE in Pyro"
+    "## Implementing a variational autoencoder in Pyro"
    ]
   },
   {
