--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -318,7 +318,7 @@
     "1. observations $\\Longleftrightarrow$ `pyro.sample` with the `obs` argument\n",
     "2. latent random variables $\\Longleftrightarrow$ `pyro.sample`\n",
     "3. parameters $\\Longleftrightarrow$ `pyro.param`\n",
-    "4. plates $\\Longleftrightarrow$ `pyro.plate`\n",
+    "4. plates $\\Longleftrightarrow$ `pyro.plate` context managers\n",
     "\n",
     "Now let's establish some notation. The model has observations ${\\bf x}$ and latent random variables ${\\bf z}$ as well as parameters $\\theta$. It has a joint probability density of the form \n",
     "\n",
