--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -513,7 +513,7 @@
    "source": [
     "### Optimizing the Evidence Lower Bound (ELBO)\n",
     "\n",
-    "We will use stochastic variational inference (SVI) (for an extended introduction to SVI, see [SVI Part I](svi_part_i.ipynb)) for doing inference, using stochastic gradient descent to optimize the output of a `pyro.infer.Trace_ELBO` object that we pass to `pyro.infer.SVI`. "
+    "We will use stochastic variational inference (SVI) (for an extended introduction to SVI, see [SVI Part I](pyro.ai/examples/svi_part_i.html)) for doing inference, using stochastic gradient descent to optimize the output of a `pyro.infer.Trace_ELBO` object that we pass to `pyro.infer.SVI`. "
    ]
   },
   {
@@ -532,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we use the `Adam` optimizer from Pyro's `optim` module and not the `torch.optim` module as earlier. Here `Adam` is a thin wrapper around `torch.optim.Adam` (see [here](svi_part_i.ipynb#Optimizers) for a discussion). Optimizers in `pyro.optim` are used to optimize and update parameter values in Pyro's parameter store. In particular, you will notice that we do not need to pass in learnable parameters to the optimizer since that is determined by the guide code and happens behind the scenes within the `SVI` class automatically. To take an ELBO gradient step we simply call the step method of SVI. The data argument we pass to `SVI.step` will be passed to both `model()` and `guide()`. The complete training loop is as follows:"
+    "Note that we use the `Adam` optimizer from Pyro's `optim` module and not the `torch.optim` module as earlier. Here `Adam` is a thin wrapper around `torch.optim.Adam` (see [here](pyro.ai/examples/svi_part_i.html#Optimizers) for a discussion). Optimizers in `pyro.optim` are used to optimize and update parameter values in Pyro's parameter store. In particular, you will notice that we do not need to pass in learnable parameters to the optimizer since that is determined by the guide code and happens behind the scenes within the `SVI` class automatically. To take an ELBO gradient step we simply call the step method of SVI. The data argument we pass to `SVI.step` will be passed to both `model()` and `guide()`. The complete training loop is as follows:"
    ]
   },
   {
