--- a/tutorial/source/mia_intro.ipynb
+++ b/tutorial/source/mia_intro.ipynb
@@ -29,107 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pyro-ppl[extras] in /home/eli/pyro (1.4.0+f9295ccb)\n",
-      "Requirement already satisfied: numpy>=1.7 in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (1.16.2)\n",
-      "Requirement already satisfied: opt_einsum>=2.3.2 in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (2.3.2)\n",
-      "Requirement already satisfied: pyro-api>=0.1.1 in /home/eli/pyro-api (from pyro-ppl[extras]) (0.1.2)\n",
-      "Requirement already satisfied: torch>=1.5.0 in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (1.6.0.dev20200420+cpu)\n",
-      "Requirement already satisfied: tqdm>=4.36 in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (4.36.1)\n",
-      "Requirement already satisfied: jupyter>=1.0.0 in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (1.0.0)\n",
-      "Requirement already satisfied: graphviz>=0.8 in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (0.10.1)\n",
-      "Requirement already satisfied: matplotlib>=1.3 in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (3.0.3)\n",
-      "Requirement already satisfied: torchvision>=0.6.0 in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (0.7.0.dev20200420+cpu)\n",
-      "Requirement already satisfied: visdom>=0.1.4 in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (0.1.8.8)\n",
-      "Requirement already satisfied: pandas in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (1.0.3)\n",
-      "Requirement already satisfied: scikit-learn in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (0.22.2.post1)\n",
-      "Requirement already satisfied: seaborn in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (0.9.0)\n",
-      "Requirement already satisfied: wget in /home/eli/anaconda3/lib/python3.7/site-packages (from pyro-ppl[extras]) (3.2)\n",
-      "Requirement already satisfied: future in /home/eli/anaconda3/lib/python3.7/site-packages (from torch>=1.5.0->pyro-ppl[extras]) (0.17.1)\n",
-      "Requirement already satisfied: ipywidgets in /home/eli/anaconda3/lib/python3.7/site-packages (from jupyter>=1.0.0->pyro-ppl[extras]) (7.4.2)\n",
-      "Requirement already satisfied: jupyter-console in /home/eli/anaconda3/lib/python3.7/site-packages (from jupyter>=1.0.0->pyro-ppl[extras]) (6.0.0)\n",
-      "Requirement already satisfied: nbconvert in /home/eli/anaconda3/lib/python3.7/site-packages (from jupyter>=1.0.0->pyro-ppl[extras]) (5.4.1)\n",
-      "Requirement already satisfied: qtconsole in /home/eli/anaconda3/lib/python3.7/site-packages (from jupyter>=1.0.0->pyro-ppl[extras]) (4.4.3)\n",
-      "Requirement already satisfied: ipykernel in /home/eli/anaconda3/lib/python3.7/site-packages (from jupyter>=1.0.0->pyro-ppl[extras]) (5.1.0)\n",
-      "Requirement already satisfied: notebook in /home/eli/anaconda3/lib/python3.7/site-packages (from jupyter>=1.0.0->pyro-ppl[extras]) (5.7.6)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from matplotlib>=1.3->pyro-ppl[extras]) (2.8.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from matplotlib>=1.3->pyro-ppl[extras]) (2.3.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from matplotlib>=1.3->pyro-ppl[extras]) (1.0.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/eli/anaconda3/lib/python3.7/site-packages (from matplotlib>=1.3->pyro-ppl[extras]) (0.10.0)\n",
-      "Requirement already satisfied: pillow>=4.1.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from torchvision>=0.6.0->pyro-ppl[extras]) (7.1.1)\n",
-      "Requirement already satisfied: scipy in /home/eli/anaconda3/lib/python3.7/site-packages (from visdom>=0.1.4->pyro-ppl[extras]) (1.4.1)\n",
-      "Requirement already satisfied: tornado in /home/eli/anaconda3/lib/python3.7/site-packages (from visdom>=0.1.4->pyro-ppl[extras]) (6.0.1)\n",
-      "Requirement already satisfied: requests in /home/eli/anaconda3/lib/python3.7/site-packages (from visdom>=0.1.4->pyro-ppl[extras]) (2.21.0)\n",
-      "Requirement already satisfied: torchfile in /home/eli/anaconda3/lib/python3.7/site-packages (from visdom>=0.1.4->pyro-ppl[extras]) (0.1.0)\n",
-      "Requirement already satisfied: pyzmq in /home/eli/anaconda3/lib/python3.7/site-packages (from visdom>=0.1.4->pyro-ppl[extras]) (18.0.1)\n",
-      "Requirement already satisfied: six in /home/eli/anaconda3/lib/python3.7/site-packages (from visdom>=0.1.4->pyro-ppl[extras]) (1.14.0)\n",
-      "Requirement already satisfied: websocket-client in /home/eli/anaconda3/lib/python3.7/site-packages (from visdom>=0.1.4->pyro-ppl[extras]) (0.55.0)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /home/eli/anaconda3/lib/python3.7/site-packages (from pandas->pyro-ppl[extras]) (2018.9)\n",
-      "Requirement already satisfied: joblib>=0.11 in /home/eli/anaconda3/lib/python3.7/site-packages (from scikit-learn->pyro-ppl[extras]) (0.13.2)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (4.3.2)\n",
-      "Requirement already satisfied: ipython>=4.0.0; python_version >= \"3.3\" in /home/eli/anaconda3/lib/python3.7/site-packages (from ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (7.3.0)\n",
-      "Requirement already satisfied: widgetsnbextension~=3.4.0 in /home/eli/anaconda3/lib/python3.7/site-packages (from ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (3.4.2)\n",
-      "Requirement already satisfied: nbformat>=4.2.0 in /home/eli/anaconda3/lib/python3.7/site-packages (from ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (4.4.0)\n",
-      "Requirement already satisfied: jupyter-client in /home/eli/anaconda3/lib/python3.7/site-packages (from jupyter-console->jupyter>=1.0.0->pyro-ppl[extras]) (5.2.4)\n",
-      "Requirement already satisfied: prompt-toolkit<2.1.0,>=2.0.0 in /home/eli/anaconda3/lib/python3.7/site-packages (from jupyter-console->jupyter>=1.0.0->pyro-ppl[extras]) (2.0.9)\n",
-      "Requirement already satisfied: pygments in /home/eli/anaconda3/lib/python3.7/site-packages (from jupyter-console->jupyter>=1.0.0->pyro-ppl[extras]) (2.7.1)\n",
-      "Requirement already satisfied: jinja2 in /home/eli/anaconda3/lib/python3.7/site-packages (from nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (2.10.3)\n",
-      "Requirement already satisfied: mistune>=0.8.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (0.8.4)\n",
-      "Requirement already satisfied: testpath in /home/eli/anaconda3/lib/python3.7/site-packages (from nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (0.4.2)\n",
-      "Requirement already satisfied: jupyter-core in /home/eli/anaconda3/lib/python3.7/site-packages (from nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (4.4.0)\n",
-      "Requirement already satisfied: pandocfilters>=1.4.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (1.4.2)\n",
-      "Requirement already satisfied: defusedxml in /home/eli/anaconda3/lib/python3.7/site-packages (from nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (0.5.0)\n",
-      "Requirement already satisfied: entrypoints>=0.2.2 in /home/eli/anaconda3/lib/python3.7/site-packages (from nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (0.3)\n",
-      "Requirement already satisfied: bleach in /home/eli/anaconda3/lib/python3.7/site-packages (from nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (3.1.0)\n",
-      "Requirement already satisfied: ipython-genutils in /home/eli/anaconda3/lib/python3.7/site-packages (from qtconsole->jupyter>=1.0.0->pyro-ppl[extras]) (0.2.0)\n",
-      "Requirement already satisfied: prometheus-client in /home/eli/anaconda3/lib/python3.7/site-packages (from notebook->jupyter>=1.0.0->pyro-ppl[extras]) (0.6.0)\n",
-      "Requirement already satisfied: terminado>=0.8.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from notebook->jupyter>=1.0.0->pyro-ppl[extras]) (0.8.1)\n",
-      "Requirement already satisfied: Send2Trash in /home/eli/anaconda3/lib/python3.7/site-packages (from notebook->jupyter>=1.0.0->pyro-ppl[extras]) (1.5.0)\n",
-      "Requirement already satisfied: setuptools in /home/eli/anaconda3/lib/python3.7/site-packages (from kiwisolver>=1.0.1->matplotlib>=1.3->pyro-ppl[extras]) (41.0.1)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from requests->visdom>=0.1.4->pyro-ppl[extras]) (1.24.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/eli/anaconda3/lib/python3.7/site-packages (from requests->visdom>=0.1.4->pyro-ppl[extras]) (2019.6.16)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/eli/anaconda3/lib/python3.7/site-packages (from requests->visdom>=0.1.4->pyro-ppl[extras]) (3.0.4)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /home/eli/anaconda3/lib/python3.7/site-packages (from requests->visdom>=0.1.4->pyro-ppl[extras]) (2.8)\n",
-      "Requirement already satisfied: decorator in /home/eli/anaconda3/lib/python3.7/site-packages (from traitlets>=4.3.1->ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (4.3.2)\n",
-      "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /home/eli/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (4.6.0)\n",
-      "Requirement already satisfied: jedi>=0.10 in /home/eli/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (0.13.3)\n",
-      "Requirement already satisfied: pickleshare in /home/eli/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (0.7.5)\n",
-      "Requirement already satisfied: backcall in /home/eli/anaconda3/lib/python3.7/site-packages (from ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (0.1.0)\n",
-      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /home/eli/anaconda3/lib/python3.7/site-packages (from nbformat>=4.2.0->ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (3.0.1)\n",
-      "Requirement already satisfied: wcwidth in /home/eli/anaconda3/lib/python3.7/site-packages (from prompt-toolkit<2.1.0,>=2.0.0->jupyter-console->jupyter>=1.0.0->pyro-ppl[extras]) (0.1.7)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /home/eli/anaconda3/lib/python3.7/site-packages (from jinja2->nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (1.1.1)\n",
-      "Requirement already satisfied: webencodings in /home/eli/anaconda3/lib/python3.7/site-packages (from bleach->nbconvert->jupyter>=1.0.0->pyro-ppl[extras]) (0.5.1)\n",
-      "Requirement already satisfied: ptyprocess; os_name != \"nt\" in /home/eli/anaconda3/lib/python3.7/site-packages (from terminado>=0.8.1->notebook->jupyter>=1.0.0->pyro-ppl[extras]) (0.6.0)\n",
-      "Requirement already satisfied: parso>=0.3.0 in /home/eli/anaconda3/lib/python3.7/site-packages (from jedi>=0.10->ipython>=4.0.0; python_version >= \"3.3\"->ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (0.3.4)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: attrs>=17.4.0 in /home/eli/anaconda3/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (19.1.0)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in /home/eli/anaconda3/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets->jupyter>=1.0.0->pyro-ppl[extras]) (0.14.11)\n",
-      "Requirement already satisfied: daft in /home/eli/anaconda3/lib/python3.7/site-packages (0.1.0)\n",
-      "Requirement already satisfied: numpy in /home/eli/anaconda3/lib/python3.7/site-packages (from daft) (1.16.2)\n",
-      "Requirement already satisfied: matplotlib in /home/eli/anaconda3/lib/python3.7/site-packages (from daft) (3.0.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/eli/anaconda3/lib/python3.7/site-packages (from matplotlib->daft) (0.10.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from matplotlib->daft) (2.8.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from matplotlib->daft) (1.0.1)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/eli/anaconda3/lib/python3.7/site-packages (from matplotlib->daft) (2.3.1)\n",
-      "Requirement already satisfied: six in /home/eli/anaconda3/lib/python3.7/site-packages (from cycler>=0.10->matplotlib->daft) (1.14.0)\n",
-      "Requirement already satisfied: setuptools in /home/eli/anaconda3/lib/python3.7/site-packages (from kiwisolver>=1.0.1->matplotlib->daft) (41.0.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install pyro-ppl[extras]\n",
-    "!pip install daft"
+    "!pip install -q pyro-ppl[extras] daft"
    ]
   },
   {
